--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@react-oauth/google": "^0.12.2",
     "antd": "^5.28.1",
     "dotenv": "^17.2.1",
     "lucide-react": "^0.344.0",
